# grapha

./: .gitignore  README.md  package.yaml
Interpreter/: .ccls  .gitignore  CMakeLists.txt
Interpreter/src/: allocator.cc  allocator.h  cell.cc  cell.h  ginstr.cc  ginstr.h  instruction.cc  instruction.h  load.cc  load.h  main.cc  misc.h  node.cc  node.h  parse.cc  parse.h  prelude.h  runtime.cc  runtime.h  sc.cc  sc.h  tag-pool.h  vm.cc  vm.h
app/: Main.hs
examples/: compile-and-run.sh  evod.txt  fibs.txt  guess.txt  pattern-matching.txt  prime.txt
src/: Misc.hs  ParserHelper.hs  Pipe.hs
src/Lang/: Builtins.hs  Core.hs  GCode.hs  Kind.hs  Literal.hs  SC.hs  Simpl.hs  Surface.hs  Type.hs  Typing.hs  TypingEnv.hs
src/Lang/Simpl/: KindProber.hs  Translator.hs
src/Lang/Surface/: Balance.hs  Balancer.hs  CaseLineariser.hs  Desugar.hs  Grouper.hs  Parser.hs  PatternMatchCompiler.hs  Rename.hs  Renamer.hs  Subst.hs
src/Pipes/: Balancer.hs  CaseExpander.hs  ConstrCollector.hs  Desugar.hs  GCodeCompiler.hs  GCodePrinter.hs  Grouper.hs  Lifter.hs  Parser.hs  PatternMatchingCompiler.hs  PreludeInjector.hs  Translator.hs  TypeChecker.hs
