CMAKE_MINIMUM_REQUIRED(VERSION 3.8.0)

PROJECT(gi VERSION 0.0.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(GI_SRC
  src/cell.cc
  src/load.cc
  src/instruction.cc
  src/vm.cc
  src/allocator.cc
  src/main.cc
  )

ADD_EXECUTABLE(gi ${GI_SRC})

FIND_LIBRARY(fmt     REQUIRED)
FIND_LIBRARY(cxxopts REQUIRED)

TARGET_LINK_LIBRARIES(gi fmt)

SET_TARGET_PROPERTIES(gi PROPERTIES
  OUTPUT_NAME              "gi"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

INSTALL(TARGETS gi DESTINATION bin)
